--- a/productos/templates/productos/producto_confirm_delete.html
+++ b/productos/templates/productos/producto_confirm_delete.html
@@ -7,7 +7,7 @@
         
         <h1 style="color: red;">⚠️Confirmar Eliminación⚠️</h1>
         <p style="font-size: 1.1em;">
-            ¿Desea realmente eliminar este producto?
+            ¿Realmente desea eliminar este producto?
         </p>
         
         <h2 style="color: var(--color-navbar); margin-top: 5px;">
@@ -26,7 +26,7 @@
                         cursor: pointer; 
                         font-weight: bold; 
                         margin-right: 15px;">
-                Sí, Eliminar Permanentemente
+                Sí, Eliminar para siempre
             </button>
             
             <a href="{% url 'mis_productos' %}" 
