--- a/tienda_artaud/templates/registration/logged_out.html
+++ b/tienda_artaud/templates/registration/logged_out.html
@@ -13,7 +13,7 @@
             Ha cerrado sesión exitosamente. ¡Vuelva pronto!
         </p>
         
-        <a href="{% url 'login' %}" 
+        <a href="{% url 'account_login' %}" 
             style="display: inline-block; 
                     padding: 10px 20px; 
                     background-color: var(--color-navbar); 
