--- a/tienda_artaud/templates/registration/login.html
+++ b/tienda_artaud/templates/registration/login.html
@@ -1,4 +1,6 @@
 {% extends 'base.html' %}
+{% load socialaccount %}
+
 
 {% block title %}Iniciar Sesión{% endblock %}
 
@@ -6,42 +8,44 @@
     <div style="max-width: 400px; margin: 40px auto; padding: 20px; border: 1px solid #ccc; border-radius: 8px;">
         <h2 style="text-align: center;">Ingresar a Tienda Artaud</h2>
         
-        <form method="post">
-            {% csrf_token %}
-            
-            {% if form.errors %}
-                <div style="color: red; margin-bottom: 15px; border: 1px solid red; padding: 10px; border-radius: 4px;">
-                    <p>Tu nombre de usuario o contraseña no coinciden. Por favor, intentalo de nuevo.</p>
+            <form method="post">
+                {% csrf_token %}
+                
+                {% if form.errors %}
+                    <div style="color: red; margin-bottom: 15px; border: 1px solid red; padding: 10px; border-radius: 4px;">
+                        <p>Tu nombre de usuario o contraseña no coinciden. Por favor, intentalo de nuevo.</p>
+                    </div>
+                {% endif %}
+
+                <div style="margin-bottom: 15px;">
+                    <label for="{{ form.username.id_for_label }}" style="display: block; margin-bottom: 5px; font-weight: bold;">
+                        Nombre de Usuario:
+                    </label>
+                    {{ form.username }}
                 </div>
-            {% endif %}
 
-            <div style="margin-bottom: 15px;">
-                <label for="{{ form.username.id_for_label }}" style="display: block; margin-bottom: 5px; font-weight: bold;">
-                    Nombre de Usuario:
-                </label>
-                {{ form.username }}
-            </div>
+                <div style="margin-bottom: 20px;">
+                    <label for="{{ form.password.id_for_label }}" style="display: block; margin-bottom: 5px; font-weight: bold;">
+                        Contraseña:
+                    </label>
+                    {{ form.password }}
+                </div>
+                
+                <button type="submit" 
+                        style="width: 100%; padding: 10px; background-color: var(--color-navbar); color: white; border: none; border-radius: 4px; cursor: pointer; font-size: 1em;">
+                    Iniciar Sesión
+                </button>
+                
+                <input type="hidden" name="next" value="{{ next }}">
+            </form>
 
-            <div style="margin-bottom: 20px;">
-                <label for="{{ form.password.id_for_label }}" style="display: block; margin-bottom: 5px; font-weight: bold;">
-                    Contraseña:
-                </label>
-                {{ form.password }}
-            </div>
-            
-            <button type="submit" 
-                    style="width: 100%; padding: 10px; background-color: var(--color-navbar); color: white; border: none; border-radius: 4px; cursor: pointer; font-size: 1em;">
-                Iniciar Sesión
-            </button>
-            
-            <input type="hidden" name="next" value="{{ next }}">
-        </form>
+        {% include "registration/_google_login.html" %}
 
         <p style="margin-top: 20px; text-align: center; font-size: 0.9em;">
             ¿Olvidaste tu contraseña? <a href="{% url 'password_reset' %}" style="color: var(--color-acento);">Restablecer</a>
         </p>
         <p style="text-align: center; font-size: 0.9em;">
-            ¿Primera vez en Tienda Artaud? <a href="{% url 'signup' %}" style="color: var(--color-acento); font-weight: bold;">Registrate por acá</a>
+            ¿Primera vez en Tienda Artaud? <a href="{% url 'account_signup' %}" style="color: var(--color-acento); font-weight: bold;">Registrate por acá</a>
         </p>
     </div>
     
@@ -54,4 +58,10 @@
             box-sizing: border-box; /* Incluye padding y borde en el ancho total */
         }
     </style>
+
+    <h2>Ingresar con Google</h2>
+
+        <a href="{% provider_login_url 'google' %}">
+            Ingresar con Google
+        </a>
 {% endblock content %}
